# packages/backEnd/build/swagger.json
@@ -9,11 +9,7 @@
 			"HttpResponse_any_": {
 				"properties": {
 					"data": {},
-					"error": {
-						"type": "string",
-						"nullable": true,
-						"default": null
-					},
+					"error": {},
 					"statusCode": {
 						"type": "number",
 						"format": "double"
@@ -21,6 +17,7 @@
 				},
 				"required": [
 					"data",
+					"error",
 					"statusCode"
 				],
 				"type": "object",
@@ -35,6 +32,38 @@
 						"type": "string"
 					}
 				},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ObjectId": {
+				"type": "string",
+				"description": "A class representation of the BSON ObjectId type."
+			},
+			"User": {
+				"properties": {
+					"email": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"lastLoggedIn": {
+						"type": "string"
+					},
+					"logOutDate": {
+						"type": "string"
+					},
+					"_id": {
+						"$ref": "#/components/schemas/ObjectId"
+					}
+				},
+				"required": [
+					"email",
+					"name",
+					"lastLoggedIn",
+					"logOutDate",
+					"_id"
+				],
 				"type": "object",
 				"additionalProperties": false
 			}
@@ -142,14 +171,6 @@
 							"application/json": {
 								"schema": {
 									"$ref": "#/components/schemas/HttpResponse_any_"
-								},
-								"examples": {
-									"Example 1": {
-										"value": {
-											"email": "hello@tsoa.com",
-											"password": "unique password"
-										}
-									}
 								}
 							}
 						}
@@ -177,28 +198,6 @@
 							"application/json": {
 								"schema": {
 									"$ref": "#/components/schemas/HttpResponse_any_"
-								},
-								"examples": {
-									"Data Response": {
-										"value": {
-											"email": "hello@tsoa.com",
-											"password": "unique password"
-										}
-									},
-									"Response 200": {
-										"value": {
-											"data": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
-											"error": null,
-											"statusCode": 200
-										}
-									},
-									"Response 400": {
-										"value": {
-											"data": "null",
-											"error": "400",
-											"statusCode": 400
-										}
-									}
 								}
 							}
 						}
@@ -233,11 +232,9 @@
 						}
 					}
 				},
-				"description": "Email the token to authenticate the user",
 				"security": [],
 				"parameters": [
 					{
-						"description": "Token",
 						"in": "path",
 						"name": "token",
 						"required": true,
@@ -246,30 +243,6 @@
 						}
 					}
 				]
-			}
-		},
-		"/api/v1/logout": {
-			"get": {
-				"operationId": "UserLogout",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/HttpResponse_any_"
-								}
-							}
-						}
-					}
-				},
-				"description": "Logout require valid token from header",
-				"security": [
-					{
-						"jwt": []
-					}
-				],
-				"parameters": []
 			}
 		},
 		"/api/v1/profile": {
@@ -315,7 +288,7 @@
 				}
 			}
 		},
-		"/api/v1/user": {
+		"/profile/user": {
 			"get": {
 				"operationId": "GetUser",
 				"responses": {
@@ -324,13 +297,33 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/HttpResponse_any_"
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/User"
+										}
+									],
+									"nullable": true
 								}
 							}
 						}
 					}
 				},
-				"description": "Retrieves the details of an existing user.\r\nSupply the unique user ID from db and receive corresponding user details.",
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": []
+			}
+		},
+		"/profile/logout": {
+			"get": {
+				"operationId": "UserLogout",
+				"responses": {
+					"200": {
+						"description": ""
+					}
+				},
 				"security": [
 					{
 						"jwt": []
